syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;

message Greeting { 
  string first_name = 1; 
  string last_name = 2;
}



// The request message containing the user's name.
message HelloRequest {
  Greeting name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// The request message containing the user's name.
message HelloManyTimesRequest {
  Greeting name = 1;
}

// The response message containing the greetings.
message HelloManyTimesReply {
  string message = 1;
}

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  // server streaming 
  rpc SayHelloManyTimes (HelloManyTimesRequest) returns (stream HelloManyTimesReply); 
}

